# pwncat

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: building.yml  code-black.yml  code-mypy.yml  code-pycodestyle.yml  code-pydocstyle.yml  code-pylint.yml  gen.sh  linting.yml  smoke-2.7.yml  smoke-3.5.yml  smoke-3.6.yml  smoke-3.7.yml  smoke-3.8.yml  template-test.tpl  test-linux-2.7.yml  test-linux-3.5,.yml  test-linux-3.5.yml  test-linux-3.6.yml  test-linux-3.7.yml  test-linux-3.8,.yml  test-linux-3.8.yml  test-linux-pypy2,.yml  test-linux-pypy2.yml  test-linux-pypy3.yml  test-linux.yml  test-macos-2.7.yml  test-macos-3.5,.yml  test-macos-3.5.yml  test-macos-3.6.yml  test-macos-3.7.yml  test-macos-3.8,.yml  test-macos-3.8.yml  test-macos-pypy2,.yml  test-macos-pypy2.yml  test-macos-pypy3.yml  test-macos.yml  test-windows-2.7.yml  test-windows-3.5,.yml  test-windows-3.5.yml  test-windows-3.6.yml  (+57 more)
docs/: CNAME  index.html  pwncat.api.html  pwncat.man.html  pwncat.type.html
man/: pwncat.1
pse/: README.md
pse/asym-enc/: README.md  pse-asym_enc-client_recv.py  pse-asym_enc-client_send.py  pse-asym_enc-server_recv.py  pse-asym_enc-server_send.py
pse/chat-bot/: README.md  pse-chat_bot.py
pse/http-post/: README.md  pse-http_post-pack.py  pse-http_post-unpack.py
share/doc/: Makefile  conf.py  faq.rst  github.rst  index.rst  installation.rst  pse.rst  pypi.rst  requirements.txt  usage.rst
share/doc/code/: api.rst  coverage.rst
share/doc/usage/: bind-shell.rst  local-port-forwarding.rst  portscanning.rst  remote-port-forwarding.rst  reverse-shell.rst  send-receive-files.rst
share/pkg/: Makefile  README.md
share/pkg/.lib/: blackarch.sh  brew.sh  pentoo.sh
tests/: .lib.sh  00-socket-reuseaddr.sh  01-client.sh  01-tcp-client-http-server-request.sh  03-tcp-client-send-text-to-server.sh  03-udp-client-send-text-to-server.sh  04-tcp-client-send-file-to-server.sh  04-udp-client-send-file-to-server.sh  05-tcp-client-send-command-to-server.sh  05-udp-client-send-command-to-server.sh  100-behaviour-tcp_client_exits_and_server_hangs_up.sh  101-behaviour-udp_client_exits_and_server_stays_alive.sh  102-behaviour-tcp_server_exits_and_hangs_up.sh  103-behaviour-udp_server_exits_and_client_stays_alive.sh  110-behaviour-tcp_socket_reuseaddr.sh  111-behaviour-udp_socket_reuseaddr.sh  200-basics-client-tcp_make_http_request.sh  202-basics-client-tcp_send_text_to_server.sh  203-basics-client-udp_send_text_to_server.sh  204-basics-client-tcp_send_file_to_server.sh  205-basics-client-udp_send_file_to_server.sh  206-basics-client-tcp_send_comand_to_server.sh  207-basics-client-udp_send_comand_to_server.sh  300-options-client-tcp_nodns.sh  301-options-client-udp_nodns.sh  302-options-tcp_server_keep_open.sh  400-mode-forward_tcp-client_make_http_request.sh  README.md
tests/.lib/: conf.sh
tests/integration/: README.md  run.sh
tests/integration/01-behaviour-quit--client/: 200---tcp---client_stays---when_valid_http_request.sh  README.md  (+10 more)
tests/pipelines/: README.md  _gen-smoke.sh  _gen-test.sh  gen.sh  run.sh  template-smoke.yml.tpl  template-test.yml.tpl
tests/smoke/: README.md  run.sh
(+115 files in other folders)
