[metadata]
description-file = README.md

[bdist_wheel]
universal=1

[pycodestyle]
max-line-length = 100

[flake8]
max-line-length = 100

[pylint]
# Don't lint useless-object-inheritance to stary Python2/3 compatible
disable = useless-object-inheritance
max-branches = 17
max-statements = 70
max-args = 8
max-attributes = 9
max-locals = 23
max-module-lines = 5000
max-bool-expr = 6
# List of note tags to take in consideration, separated by a comma.
#notes=FIXME,TODO
notes=
