[metadata]
description-file = README.md

[bdist_wheel]
universal=1

# --------------------------------------------------------------------------------
# Linter
# --------------------------------------------------------------------------------
[pycodestyle]
max-line-length = 100
statistics = True
show-source = True
show-pep8 = True

[pydocstyle]
convention = google
# D107: Description is on the class level instead
add_ignore = D107

[flake8]
max-line-length = 100

[pylint]
# useless-object-inheritance: don't lint useless-object-inheritance to stary Python2/3 compatible
# bad-continuation:           let Python Black take care of this
# unidiomatic-typecheck:      Need to check if int or bool and this doesnt work with isinstance()
disable = useless-object-inheritance, bad-continuation, unidiomatic-typecheck
max-branches = 17
max-statements = 70
max-args = 9
max-attributes = 9
max-locals = 23
max-module-lines = 5000
max-bool-expr = 6
max-returns = 11
min-public-methods = 1
# List of note tags to take in consideration, separated by a comma.
#notes=FIXME,TODO
notes=FIXME

[mypy]
# Display
show_error_context = True
show_column_numbers = True
show_error_codes = True
pretty = True
color_output = True
error_summary = True

# Meta
warn_unused_configs = True
incremental = False
show_traceback = True

# Mode
strict_optional = True
show_none_errors = True

# Allow
disallow_any_expr = False
disallow_any_explicit = False
disallow_any_decorated = False

# Deny
disallow_any_unimported = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True
allow_untyped_globals = False
allow_redefinition = False

[bandit]
# B101: asserts
# B404: blacklist (this is an offensive tool overall)
skips = B101,B404
